# Vanguard

./: .gitignore  ASSUMPTIONS.md  CLAUDE.md  README.md  render.yaml
code/backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
code/backend/app/: auth.py  limits.py  main.py  models.py  safety.py
code/backend/tests/: test_auth.py  test_extract_route.py  test_models.py  test_parsers.py  test_redact.py  test_safety.py  test_zero_retention.py
ml/: .gitignore  HANDOFF_TO_EXTENSION.md  README.md  pyproject.toml
ml/contracts/: eval-authoring-template.md  export-contract.md  label-schema.md
ml/data/: README.md  counterexamples_exam2.jsonl  counterexamples_train.jsonl  counterexamples_train2.jsonl
ml/data/fixtures/: tiny_train.jsonl
ml/data/handoff/: README.md  draft_for_audit.jsonl
ml/notebooks/: train_colab.ipynb
ml/prompts/: v1_generate_span_labels.md
ml/scripts/: audit_precheck.py  author_exam.py  build_web_bundle.py  check_eval_coverage.py  export_onnx.py  generate_fixtures.py  generate_llm_draft.py  measure_fertility.py  merge_audit.py  run_composed_eval.py  run_eval.py  train_span_clf.py  trim_vocab.py
ml/src/sens/: __init__.py  align.py  coverage.py  disagreement.py  encoding.py  (+10 more)
ml/tests/: test_align.py  test_coverage.py  test_disagreement.py  test_encoding.py  test_eval_gate.py  test_marking.py  test_metrics.py  test_org_dictionary.py  test_residency.py  test_run_eval_gate_wiring.py  test_sample_audit.py  test_schema.py  test_span_repair.py  test_tokenizer_markers.py  test_validate_jsonl.py  test_windowing.py
(+408 files in other folders)
