[project]
name = "sens"
version = "0.1.0"
description = "Sensitive-vs-not parallel track — span classifier (training + eval tooling)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
train = [
  "torch",
  "transformers>=4.44",
  "datasets>=2.18",
  "accelerate",
  "sentencepiece",
  "onnx",
  "onnxruntime",
  "numpy",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
